[package]
name = "smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.3"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.13"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rocksdb = "0.18.0"